--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Michael Qin
-description: This is Michael Qin's personal page.
+description: Director of Technology at Charles Schwab
