--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Michael Qin
-description: Director of Technology at Charles Schwab
+description: Director of Technology at Charles Schwab. Certified Architect and Egineer on AWS and Google Cloud.
