--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 theme: jekyll-theme-hacker
 title: Michael Qin
 description: Director of Technology at Charles Schwab. Certified Architect and Egineer on AWS and Google Cloud.
+markdown: kramdown
+permalink: /blog/:year/:month/:day/:title
 author:
   name: Michael Qin
   email: mike.qin@gmail.com
 show_downloads: false
-github:
-  is_project_page: false
+github: [metadata]
